AZUREUS CHANGELOG
-----------------

2007.xx.xx | Azureus 3.0.1.7

FEATURE: UI   | New "Torrent" menu in the menu bar [amc1]
FEATURE: UI   | "Clear Resume Data" menu option added [amc1]

CHANGE: Core  | Much better peer ID identification code added, many more clients now correctly identified [amc1]
CHANGE: Core  | Changes made to identify some "fake" clients (or other clients which identify themselves in a problematic way) [amc1]
CHANGE: Core  | Core changes in some places to allow "Default save path" to be used without requiring "Use default data dir" to be enabled [hasturkun]
CHANGE: UI    | UL/DL speed selection on right click of status bar changed from menu to scale widget. [TuxPaper]
                Usage: (1) MouseDown+Drag+MouseUp  (2) Click+Move+Click  (3) Click+type number+Enter
CHANGE: UI    | Open Torrent Window now asks to create directories if they don't exist yet, instead of evilly auto-creating them when you click the Browse button [The_8472] 
CHANGE: UI    | Added download status to the General torrent view [amc1]
CHANGE: UI    | User Comment field more useful in General torrent view - easy edit link, hyperlink formatting, auto-resizing [amc1]
                
BUGFIX: Core  | Fixed bug where renaming a download in some conditions would generate "Target is sub-directory" errors [amc1]                
BUGFIX: Core  | Fixed swarm view rendering bug where some incomplete peers were shown as full circles [The8472]
BUGFIX: Plug  | Fixed bug where previously removed child menu items would still be present when generating some menus [amc1]


2007.06.20 | Azureus 3.0.1.6

FEATURE: Core | IP Filter Autoloading. Supports DAT (eMule), P2P (PeerGardian, splist), and P2B v1,2,3 (Peer Gardian 2) formats. [TuxPaper]
FEATURE: UI   | Option to display divider lines every 60 updates on the Statistics view [amc1]
FEATURE: Plug | Added helper class to make listening to download events across all downloads easier [amc1]
FEATURE: Core | Azureus AutoSpeed v2 Beta [ranul]
